@@ -1,6 +1,7 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
-$head_prefix\usepackage{fixltx2e} % LaTeX patches, \textsubscript
-\usepackage{cmap} % fix search and cut-and-paste in PDF
+$head_prefix
+\usepackage{fixltx2e} % LaTeX patches, \textsubscript
+\usepackage{cmap} % fix search and cut-and-paste in Acrobat
 $requirements
 %%% Custom LaTeX preamble
 $latex_preamble
@@ -8,6 +9,7 @@ $latex_preamble
 $stylesheet
 %%% Fallback definitions for Docutils-specific commands
 $fallbacks$pdfsetup
+$titledata
 %%% Body
 \begin{document}
 $body_pre_docinfo$docinfo$dedication$abstract$body
