@@ -1,11 +1,15 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
-$head_prefix$requirements
+$head_prefix
+\usepackage{fixltx2e} % LaTeX patches, \textsubscript
+\usepackage{cmap} % fix search and cut-and-paste in Acrobat
+$requirements
 %%% Custom LaTeX preamble
 $latex_preamble
 %%% User specified packages and stylesheets
 $stylesheet
 %%% Fallback definitions for Docutils-specific commands
 $fallbacks$pdfsetup
+$titledata
 %%% Body
 \begin{document}
 \begin{titlepage}
