@@ -1,7 +1,8 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
 \documentclass[a4paper,english]{article}
+
 \usepackage{fixltx2e} % LaTeX patches, \textsubscript
-\usepackage{cmap} % fix search and cut-and-paste in PDF
+\usepackage{cmap} % fix search and cut-and-paste in Acrobat
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{ifthen}
@@ -26,10 +27,6 @@
   pdfauthor={Foo Fred;Bar Barney}
 }
 
-%%% Body
-\begin{document}
-
-% Document title
 \title{}
 \author{Foo Fred\\
 Food Foomatics \& Friends\\
@@ -42,6 +39,9 @@ Bar-BQ Bar\\
 Barbara St 16\\
 South Barwell}
 \date{}
+
+%%% Body
+\begin{document}
 \maketitle
 
 \end{document}
