@@ -1,7 +1,8 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
 \documentclass[a4paper,english]{article}
+
 \usepackage{fixltx2e} % LaTeX patches, \textsubscript
-\usepackage{cmap} % fix search and cut-and-paste in PDF
+\usepackage{cmap} % fix search and cut-and-paste in Acrobat
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{ifthen}
@@ -179,10 +180,6 @@
   pdfauthor={David Goodger;Me;Myself;I}
 }
 
-%%% Body
-\begin{document}
-
-% Document title
 \title{reStructuredText Test Document%
   \phantomsection%
   \label{restructuredtext-test-document}%
@@ -191,8 +188,10 @@
   \large{Examples of Syntax Constructs}%
   \label{examples-of-syntax-constructs}%
   \label{subtitle}}
-\author{}
 \date{}
+
+%%% Body
+\begin{document}
 \maketitle
 
 % Docinfo
