@@ -39,8 +39,9 @@ def suite():
 
 head_template = string.Template(
 r"""% generated by Docutils <http://docutils.sourceforge.net/>
-$head_prefix\usepackage{fixltx2e} % LaTeX patches, \textsubscript
-\usepackage{cmap} % fix search and cut-and-paste in PDF
+$head_prefix
+\usepackage{fixltx2e} % LaTeX patches, \textsubscript
+\usepackage{cmap} % fix search and cut-and-paste in Acrobat
 $requirements
 %%% Custom LaTeX preamble
 $latex_preamble
@@ -48,6 +49,7 @@ $latex_preamble
 $stylesheet
 %%% Fallback definitions for Docutils-specific commands
 $fallbacks$pdfsetup
+$titledata
 %%% Body
 \begin{document}
 """)
@@ -73,7 +75,8 @@ pdfsetup = r"""
   \usepackage[unicode,colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
   \urlstyle{same} % normal text font (alternatives: tt, rm, sf)
 }{}
-""")
+""",
+titledata = '')
 
 head = head_template.substitute(parts)
 
@@ -598,20 +601,17 @@ This is a *section title*
 This is the *document*.
 """,
 head_template.substitute(
-    dict(parts, pdfsetup = parts['pdfsetup'] + r"""\hypersetup{
+    dict(parts, pdfsetup=parts['pdfsetup'] + r"""\hypersetup{
   pdftitle={This is the Title},
 }
-""")) + r"""
-% Document title
-\title{This is the \emph{Title}%
+""", titledata=r"""\title{This is the \emph{Title}%
   \phantomsection%
   \label{this-is-the-title}%
   \\ % subtitle%
   \large{This is the \emph{Subtitle}}%
   \label{this-is-the-subtitle}}
-\author{}
 \date{}
-\maketitle
+""")) + r"""\maketitle
 
 
 %___________________________________________________________________________
