@@ -24,6 +24,7 @@ Changes Since 0.7
 * docutils/writers/latex2e/__init__.py
 
   - Fix [ 3043986 ] AttributeError using :local: with table of content.
+  - Place title data in the document preamble.
 
 * tools/editors/emacs/rst.el:
 
